[project]
name = "telegram-bot"
version = "0.1.0"
description = ""
authors = [
    {name = "Oliver Koyoc",email = "oliver@monthly.la"}
]
readme = "README.md"
package-mode = false
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.9.3",
    "bs4>=0.0.1",
    "certifi>=2020.12.5",
    "chardet>=4.0.0",
    "idna>=2.10",
    "requests>=2.25.1",
    "schedule>=1.0.0",
    "soupsieve>=2.2.1",
    "urllib3>=1.26.4",
    "pypdf (>=6.1.1,<7.0.0)",
    "pytz (>=2025.2,<2026.0)",
    "python-dotenv>=1.0.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
